# rust-redpanda

./: Cargo.toml  README.md  build.rs
proto/: chat.proto
src/: args.rs  main.rs  message.rs
