[package]
name = "red-panda-test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
futures-util = "0.3.31"
prost = "0.14.1"
rdkafka = { version = "0.37", features = ["cmake-build"] }
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1", features = ["full"] }  # Pour l'asynchrone
tonic = "0.14.1"

[build-dependencies]
prost-build = "0.14.1"
tonic-build = "0.14.1"


